--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,55 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+* {
+  font-family: "Montserrat", sans-serif;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.h-screen {
+  height: 100vh;
+}
+
+.bg-primary {
+  background-color: #171717 !important;
+}
+
+.bg-white {
+  background-color: #fff !important;
+}
+
+.w-400 {
+  width: 400px !important;
+}
+
+input {
+  border: 1px solid gray !important;
+  height: 40px !important;
+  width: 100% !important;
+  padding-left: 20px !important;
+}
+
+input:focus {
+  outline: none !important;
+  border: 1px solid #171717 !important;
+}
+
+.primary-contained-btn {
+  background-color: #171717 !important;
+  border-radius: 0 !important;
+  height: 45px !important;
+  color: #fff !important;
+  text-transform: uppercase !important;
+}
+
+.ant-form-item{
+  margin-bottom: 10px !important;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  color: #171717 !important;
+  text-decoration: underline !important;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.divider {
+  border-bottom: 1px solid gray !important;
+  margin: 20px 0 !important;
 }
