--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,9 @@ a {
   border-bottom: 1px solid gray !important;
   margin: 20px 0 !important;
 }
+
+ .loader-parent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
