--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ input:focus {
   text-transform: uppercase !important;
 }
 
-.ant-form-item{
+.ant-form-item {
   margin-bottom: 10px !important;
 }
 
@@ -51,11 +51,20 @@ a {
 
 .divider {
   border-bottom: 1px solid gray !important;
-  margin: 20px 0 !important;
+  margin: 8px 0 !important;
 }
 
- .loader-parent {
+.loader-parent {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0 !important;
 }
