--- a/src/index.css
+++ b/src/index.css
@@ -20,16 +20,22 @@
   width: 400px !important;
 }
 
-input {
+input,
+textarea {
   border: 1px solid gray !important;
   height: 40px !important;
   width: 100% !important;
   padding-left: 20px !important;
 }
 
-input:focus {
+input:focus,
+textarea:focus {
   outline: none !important;
   border: 1px solid #171717 !important;
+}
+
+textarea {
+  min-height: 8dvb !important;
 }
 
 .primary-contained-btn {
