--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,10 @@ input,
 select,
 textarea {
   border: 1px solid gray !important;
+  height: 40px !important;
   width: 100% !important;
   padding: 8px 20px;
+  border-radius: 0 !important;
 }
 
 input:focus,
