--- a/src/stylesheets/custom-components.css
+++ b/src/stylesheets/custom-components.css
@@ -13,7 +13,45 @@
     width: 80px;
 }
 
-.page-title h2{
-    font-size: 25px;
+.page-title h2 {
+    font-size: 25px !important;
     text-transform: uppercase;
+}
+
+.underline {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.job-card {
+    border: 1px solid rgb(186, 186, 186) !important;
+    padding: 10px !important;
+    border-radius: 0px !important;
+}
+
+.light-divider {
+    border-bottom: 1px solid rgb(173, 173, 173);
+    margin: 5px 0;
+}
+
+.job-card h3 {
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
+.already-applied {
+    background-color: rgb(59, 129, 70);
+    font-size: 16px;
+    padding: 15px;
+    color: white;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+
+.ri-notification-line {
+    color: white !important;
 }
